<resources>
    <string name="app_name">GoGoTrain</string>
    <string name="app_key">com.rzhd.poi</string>
    <string name="app_title">Gogotrain</string>
    <string name="auth_description">Путешествуйте по России на позде\nи узнавайте где и какие места\nвы проезжаете</string>
    <string name="auth_login">Войти</string>
    <string name="create_trip_toolbar_title">Поезда, города и дата</string>
    <string name="train_number">Номер поезда</string>
    <string name="departure_point">Пункт отправления</string>
    <string name="arrival_point">Пункт назначения</string>
    <string name="departure_date">Дата выезда</string>
    <string name="all_done">Все готово</string>
    <string name="train_number_hint">015E</string>
    <string name="my_trips">Мои поездки</string>
    <string name="new_trip">Новое путешествие</string>
    <string name="local_time">Время местное</string>
    <string name="time_warning">Будьте внимательны, в работе приложения мы используем местное время.</string>
</resources>
